--- a/javascript/5-state.html
+++ b/javascript/5-state.html
@@ -87,11 +87,11 @@ console.log(fun(10,10))//20
 
 >10实参
 
->* return z;函数返回值  return什么返回什么
+> return z;函数返回值  return什么返回什么
 
 
 
->* 函数的return    直接跳出函数
+> 函数的return    直接跳出函数
 
 js中函数有作用域     声明在当前作用域的变量或函数只能在当前作用域或子作用域使用
 
